Update 's8v7f3aun-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:4cdd84ad828986303d7c700012eaa3629f6e9ebd@sha256:3b8391c916b9800bb31ad603819f7b998536debcbd9132654c18fc54add7a1a5

--- a/components/s8v7f3aun-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/s8v7f3aun-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: s8v7f3aun-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:4cdd84ad828986303d7c700012eaa3629f6e9ebd@sha256:3b8391c916b9800bb31ad603819f7b998536debcbd9132654c18fc54add7a1a5
+          name: container-image
